# tube2slides

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-desktop.txt
.github/workflows/: build-desktop.yml
docs/: NATIVE_APP.md
packaging/: desktop_launcher.py
scripts/: build_macos.sh  build_windows.ps1
src/youtube_slides/: __init__.py  browser_cookies.py  captions.py  certificates.py  cli.py  desktop_app.py  desktop_workflow.py  fingerprint.py  images.py  narrative.py  openai_narrative.py  pipeline.py  pptx_export.py  selection.py  video.py
tests/: test_captions.py  test_images.py  test_openai_narrative.py  test_pptx_export.py  test_selection.py  test_video.py
