[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tube2slides"
version = "0.1.1"
description = "Extract distinct presentation slides from YouTube lectures and export PowerPoint decks."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Feliz Vida" }]
keywords = [
  "youtube",
  "slides",
  "powerpoint",
  "lectures",
  "desktop-app",
  "yt-dlp",
  "ffmpeg",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Education",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Multimedia :: Video",
  "Topic :: Office/Business :: Office Suites",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/felizvida/tube2slides"
Repository = "https://github.com/felizvida/tube2slides"
Issues = "https://github.com/felizvida/tube2slides/issues"
Documentation = "https://github.com/felizvida/tube2slides#readme"

[project.optional-dependencies]
download = ["yt-dlp>=2024.8.6"]
desktop = [
  "imageio-ffmpeg>=0.5.1",
  "python-pptx>=1.0.2",
  "PySide6>=6.7",
  "pyinstaller>=6.10",
  "yt-dlp>=2024.8.6",
]

[project.scripts]
tube2slides = "youtube_slides.cli:main"
tube2slides-app = "youtube_slides.desktop_app:main"
youtube-slides = "youtube_slides.cli:main"
youtube-slides-app = "youtube_slides.desktop_app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_slides"]
