[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "slidewright"
version = "0.2.1"
description = "Craft readable slide decks from YouTube lectures and technical talk videos."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Feliz Vida" }]
keywords = [
  "youtube",
  "slides",
  "powerpoint",
  "lectures",
  "desktop-app",
  "yt-dlp",
  "ffmpeg",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Education",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Multimedia :: Video",
  "Topic :: Office/Business :: Office Suites",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/felizvida/slidewright"
Repository = "https://github.com/felizvida/slidewright"
Issues = "https://github.com/felizvida/slidewright/issues"
Documentation = "https://github.com/felizvida/slidewright#readme"

[project.optional-dependencies]
download = [
  "certifi>=2024.8.30",
  "yt-dlp>=2024.8.6",
]
desktop = [
  "certifi>=2024.8.30",
  "imageio-ffmpeg>=0.5.1",
  "python-pptx>=1.0.2",
  "PySide6>=6.7",
  "pyinstaller>=6.10",
  "yt-dlp>=2024.8.6",
]

[project.scripts]
slidewright = "youtube_slides.cli:main"
slidewright-app = "youtube_slides.desktop_app:main"
tube2slides = "youtube_slides.cli:main"
tube2slides-app = "youtube_slides.desktop_app:main"
youtube-slides = "youtube_slides.cli:main"
youtube-slides-app = "youtube_slides.desktop_app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_slides"]
